@@ -10,7 +10,6 @@ BEGIN {
     use_ok('GDPR::IAB::TCFv2::BitField');
     use_ok('GDPR::IAB::TCFv2::PublisherRestrictions');
     use_ok('GDPR::IAB::TCFv2::RangeSection');
-    use_ok('GDPR::IAB::TCFv2::RangeConsent');
     use_ok('GDPR::IAB::TCFv2');
 }
 
@@ -21,7 +20,6 @@ require_ok 'GDPR::IAB::TCFv2::BitUtils';
 require_ok 'GDPR::IAB::TCFv2::BitField';
 require_ok('GDPR::IAB::TCFv2::PublisherRestrictions');
 require_ok 'GDPR::IAB::TCFv2::RangeSection';
-require_ok 'GDPR::IAB::TCFv2::RangeConsent';
 require_ok 'GDPR::IAB::TCFv2';
 
 subtest "check interfaces" => sub {
@@ -34,8 +32,6 @@ subtest "check interfaces" => sub {
 
     can_ok 'GDPR::IAB::TCFv2::BitField',     @methods;
     can_ok 'GDPR::IAB::TCFv2::RangeSection', @methods;
-
-    can_ok 'GDPR::IAB::TCFv2::RangeConsent', qw<new contains all TO_JSON>;
 
     can_ok 'GDPR::IAB::TCFv2::PublisherRestrictions',
       qw<new check_publisher_restriction TO_JSON>;
